# ARIA

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CodingStandards.md  README.md  TODOs.md
ARIA/: CMakeLists.txt
ARIA/Core/: CMakeLists.txt
ARIA/Core/Concurrency/: CMakeLists.txt
ARIA/Core/Concurrency/include/ARIA/Concurrency/: SpinLock.h
ARIA/Core/Concurrency/include/ARIA/Concurrency/detail/: SpinLock.inc
ARIA/Core/Concurrency/tests/: CMakeLists.txt  SpinLock.cpp
ARIA/Core/Core/: CMakeLists.txt  _.cpp
ARIA/Core/Core/include/ARIA/: ARIA.h.in  Array.h  Auto.h  BFloat16.h  BitArray.h  BitVector.h  Buyout.h  Concepts.h  Constant.h  DisjointSet.h  Float16.h  ForEach.h  Invocations.h  Launcher.h  Layout.h  Let.h  Mosaic.h  Property.h  PropertySTL.h  Python.h  Registry.h  SmallVector.h  TensorVector.h  Tup.h  TypeArray.h  TypeMap.h  TypeSet.h  TypeTraits.h  Vector.h
ARIA/Core/Core/include/ARIA/detail/: BFloat16.inc  BitVectorImpl.h  BrokenMutex.h  BuilderImpl.h  BuyoutImpl.h  DisjointSet.inc  Float16.inc  ForEachImpl.h  LauncherBase.h  LayoutImpl.h  Macros.h  Mosaic.inc  MosaicArray.h  MosaicIterator.h  MosaicVector.h  PropertyImpl.h  PropertySTLImpl.h  PropertyType.h  PythonImpl.h  TensorVectorImpl.h  TupImpl.h  TypeArrayImpl.h  TypeSetImpl.h  VDBImpl.h
ARIA/Core/Core/tests/: Array.cu  Auto.cpp  Auto.cu  BFloat16.cu  BitArray.cu  BitVector.cu  Buyout.cpp  CMakeLists.txt  Concepts.cpp  Constant.cpp  DisjointSet.cu  Float16.cu  ForEach.cpp  Invocations.cpp  Launcher.cu  Layout.cu  Let.cpp  Let.cu  Lua.cpp  Mosaic.cu  Property.cpp  PropertySTL.cpp  Python.cpp  Registry.cpp  TensorVector.cu  Tup.cpp  TypeArray.cpp  TypeMap.cpp  TypeSet.cpp  TypeTraits.cpp  Vector.cu
ARIA/Core/Core/tests/detail/: Macros.cpp  MosaicArray.cu  MosaicIterator.cpp  MosaicIterator.cu  MosaicVector.cu
ARIA/Core/Core/tests/experimental/: Lua.cpp  Python.cpp
ARIA/Core/Coroutine/: CMakeLists.txt
ARIA/Core/Coroutine/include/ARIA/Coroutine/: AsyncTask.h  Queue.h  Station.h  SyncWait.h  Task.h  WhenAll.h
ARIA/Core/Coroutine/include/ARIA/Coroutine/detail/: Queue.inc  SchedulerBase.h  Station.inc
ARIA/Core/Coroutine/tests/: AsyncTask.cpp  CMakeLists.txt  CUDA.cu  Queue.cpp  Station.cpp  SyncWait.cpp  Task.cpp  WhenAll.cpp
ARIA/Core/Geometry/: CMakeLists.txt
ARIA/Core/Geometry/include/ARIA/: AABB.h  BVH.h  CollisionDetection.h  LineSegment.h  MarchingCube.h  MarchingCubes.h  SAT.h  Triangle.h  VDB.h
ARIA/Core/Geometry/include/ARIA/detail/: AABB.inc  CollisionDetectionImpl.h  MarchingCubeConstants.h  VDBImpl.h
ARIA/Core/Geometry/tests/: AABB.cpp  BVH.cu  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.cu  LineSegment.cpp  MarchingCube.cu  MarchingCubes.cpp  SAT.cpp  Triangle.cpp  VDB.cu
ARIA/Core/Math/: CMakeLists.txt
ARIA/Core/Math/include/ARIA/: BezierCurve.h  BoltzmannDistribution.h  Curve.h  Mat.h  Math.h  MaxwellBoltzmannDistribution.h  MortonCode.h  MovingPoint.h  Quat.h  Vec.h
ARIA/Core/Math/include/ARIA/detail/: BezierCurve.inc  BoltzmannDistribution.inc  MatImpl.h  MaxwellBoltzmannDistribution.inc  MortonCode.inc  QuatImpl.h  VecImpl.h
ARIA/Core/Math/tests/: BezierCurve.cpp  BezierCurve.cu  BoltzmannDistribution.cpp  CMakeLists.txt  Mat.cpp  Mat.cu  Math.cpp  MaxwellBoltzmannDistribution.cpp  MortonCode.cpp  MovingPoint.cpp  Quat.cpp  Quat.cu  Vec.cpp  Vec.cu
ARIA/Core/SanitizerGTestMain/: CMakeLists.txt
ARIA/Core/SanitizerGTestMain/include/tests/: Common.h
ARIA/Core/SanitizerGTestMain/src/: SanitizerGTestMain.cpp
ARIA/Life/: CMakeLists.txt
ARIA/Life/Life/: CMakeLists.txt
ARIA/Life/Life/include/ARIA/Life/: Lifecycle.h
ARIA/Life/Offline/: CMakeLists.txt
ARIA/Life/Offline/include/ARIA/Life/Offline/: Destroy.h  Lifecycle.h  MonoBehavior.h
ARIA/Life/Offline/src/: Destroy.cpp  Lifecycle.cpp  MonoBehavior.cpp
ARIA/Life/Offline/tests/: CMakeLists.txt  Destroy.cpp
ARIA/Life/Offline/tests/Lifecycle/: CMakeLists.txt  Main.cpp
ARIA/Life/Realtime/: CMakeLists.txt
ARIA/Life/Realtime/include/ARIA/Life/Realtime/: Lifecycle.h  MonoBehavior.h
ARIA/Life/Realtime/src/: Lifecycle.cpp
ARIA/Render/: CMakeLists.txt
ARIA/Render/Context/: CMakeLists.txt
ARIA/Render/Context/include/ARIA/Render/: ScriptableRenderContext.h
ARIA/Render/Context/src/: ScriptableRenderContext.cpp
ARIA/Render/Pipeline/: CMakeLists.txt
ARIA/Render/Pipeline/include/ARIA/Render/: DefaultRenderPipeline.h  RenderPipeline.h  RenderPipelineManager.h
ARIA/Render/Pipeline/src/: DefaultRenderPipeline.cpp  RenderPipelineManager.cpp
ARIA/Scene/: CMakeLists.txt
ARIA/Scene/Scene/: CMakeLists.txt
ARIA/Scene/Scene/include/ARIA/Scene/: Behavior.h  Component.h  Object.h
ARIA/Scene/Scene/include/ARIA/Scene/Components/: Transform.h
ARIA/Scene/Scene/include/ARIA/Scene/Components/detail/: TransformImpl.h
ARIA/Scene/Scene/include/ARIA/Scene/detail/: Object.inc  ObjectImpl.h
ARIA/Scene/Scene/src/: Component.cpp  Object.cpp
ARIA/Scene/Scene/src/Components/: Transform.cpp
ARIA/Scene/Scene/tests/: Behavior.cpp  CMakeLists.txt  Component.cpp  Object.cpp
ARIA/Scene/Scene/tests/Components/: Transform.cpp
ARIA/Scene/Visual/: CMakeLists.txt
ARIA/Scene/Visual/include/ARIA/Scene/: Material.h  Shader.h
ARIA/Scene/Visual/include/ARIA/Scene/Components/: Camera.h  LineRenderer.h  Renderer.h  TriMeshRenderer.h  Window.h
ARIA/Scene/Visual/src/: Camera.cpp  Window.cpp
ARIA/Scene/Visual/tests/: CMakeLists.txt  Camera.cpp
ARIA/Scene/Visual/tests/Window/: CMakeLists.txt  Main.cpp
cmake/modules/: ARIA_AddLibrary.cmake  ARIA_AddModule.cmake  ARIA_AddTests.cmake  ARIA_EnableClangTidy.cmake  ARIA_ForceOutOfTreeBuild.cmake  ARIA_LinkModuleToLibrary.cmake  ARIA_Message.cmake  ARIA_SetupModule.cmake  ARIA_SetupPlugin.cmake  cuda.cmake  select_compute_arch.cmake
cmake/scripts/: ARIA_TestAndCopyDLLs.cmake
